fixed webcharts css ref

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script type = 'text/javascript' src = './build/cat.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
-        <link type = 'text/css' rel = 'stylesheet' src = 'https://cdn.rawgit.com/RhoInc/Webcharts/master/css/webcharts.css'>
+        <link type = 'text/css' rel = 'stylesheet' href = 'https://cdn.rawgit.com/RhoInc/Webcharts/master/css/webcharts.css'>
     </head>
 
     <body>
