--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
         <title>Charting Application Tester (CAT) </title>
         <script type = 'text/javascript' src = 'https://d3js.org/d3.v3.min.js'></script>
+        <script type="text/javascript" src="deps/jquery.min.js"></script>
+        <script type="text/javascript" src="deps/underscore.js"></script>
+        <script type="text/javascript" src="deps/opt/jsv.js"></script>
+        <script type="text/javascript" src="deps/jsonform.js"></script>
+        <link rel="stylesheet" style="text/css" href="deps/opt/bootstrap.css" />
+
         <script type = 'text/javascript' src = './build/cat.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
