--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="deps/underscore.js"></script>
         <script type="text/javascript" src="deps/opt/jsv.js"></script>
         <script type="text/javascript" src="deps/jsonform.js"></script>
+        <script type="text/javascript" src="deps/json5.js"></script>
         <script type='text/javascript' src ='./build/cat.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
