move custom settings to RhoInc instance call. Load all viz-library data. fixes #35

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="server/pages/deps/jsonform.js"></script>
         <script type="text/javascript" src="server/pages/deps/json5.js"></script>
         <script type='text/javascript' src ='./build/cat.js'></script>
+        <script type='text/javascript' src ='https://cdn.rawgit.com/RhoInc/viz-library/7783f26e/util/web/data/dataFiles.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
     </head>
@@ -22,8 +23,101 @@
     </body>
 
     <script>
+    var myCatConfig =
+    {
+      useServer: false,
+      rootURL: "https://cdn.rawgit.com/RhoInc",
+      dataURL: "https://rhoinc.github.io/viz-library/data/",
+      renderers: [
+        {
+          name: "aeexplorer",
+          main: "aeTable",
+          sub: "createChart",
+          css: "css/aeTable.css",
+          schema: "settings-schema.json",
+          defaultData: "safetyData/ADAE.csv"
+        },
+        {
+          name: "clinical-timelines",
+          main: "clinicalTimelines",
+          sub: null,
+          css: null,
+          schema: "settings-schema.json",
+          defaultData: "safetyData/ADTIMELINES.csv"
+        },
+        {
+          name: "web-codebook",
+          main: "webcodebook",
+          sub: "createChart",
+          css: "css/webcodebook.css",
+          schema: null,
+          defaultData: "safetyData/ADAE.csv"
+        },
+        {
+          name: "aetimelines",
+          main: "aeTimelines",
+          sub: null,
+          css: null,
+          schema: null,
+          defaultData: "safetyData/ADAE.csv"
+        },
+        {
+          name: "paneled-outlier-explorer",
+          main: "paneledOutlierExplorer",
+          sub: null,
+          css: null,
+          schema: "settings-schema.json",
+          defaultData: "safetyData/ADBDS.csv"
+        },
+        {
+          name: "safety-histogram",
+          main: "safetyHistogram",
+          sub: null,
+          css: null,
+          schema: null,
+          defaultData: "safetyData/ADBDS.csv"
+        },
+        {
+          name: "safety-outlier-explorer",
+          main: "safetyOutlierExplorer",
+          sub: null,
+          css: null,
+          schema: "settings-schema.json",
+          defaultData: "safetyData/ADBDS.csv"
+        },
+        {
+          name: "safety-results-over-time",
+          main: "safetyResultsOverTime",
+          sub: null,
+          css: null,
+          schema: "settings-schema.json",
+          defaultData: "safetyData/ADBDS.csv"
+        },
+        {
+          name: "safety-shift-plot",
+          main: "safetyShiftPlot",
+          sub: null,
+          css: null,
+          schema: null,
+          defaultData: "safetyData/ADBDS.csv"
+        },
+        {
+          name: "query-overview",
+          main: "queryOverview",
+          sub: null,
+          css: null,
+          schema: null,
+          defaultData: "queries/queries.csv"
+        }
+      ]
+    }
 
-    var myCat = cat.createCat('body',{})
+    myCatConfig.dataFiles = dataFiles.map(function(m){
+      return m.rel_path.slice(7)
+    })
+
+    var myCat = cat.createCat('body',myCatConfig)
+
     myCat.init()
 
 
