refactor environment functionality. #39

--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
             content = 'text/html; charset = utf-8'>
 
         <title>Charting Application Tester (CAT) </title>
+
         <script type='text/javascript' src ='https://d3js.org/d3.v3.min.js'></script>
         <script type="text/javascript" src="server/pages/deps/jquery.min.js"></script>
         <script type="text/javascript" src="server/pages/deps/underscore.js"></script>
         <script type="text/javascript" src="server/pages/deps/opt/jsv.js"></script>
         <script type="text/javascript" src="server/pages/deps/jsonform.js"></script>
         <script type="text/javascript" src="server/pages/deps/json5.js"></script>
+        <script type='text/javascript' src ='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+        <script type="text/javascript" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+        
         <script type='text/javascript' src ='./build/cat.js'></script>
         <script type='text/javascript' src ='https://cdn.rawgit.com/RhoInc/viz-library/7783f26e/util/web/data/dataFiles.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
-        <link type = 'text/css' rel = 'stylesheet' href = 'https://cdn.rawgit.com/RhoInc/webcharts/master/css/webcharts.css'>
-
+        <link type = 'text/css' rel = 'stylesheet' href = 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' disabled>
+        <link type = 'text/css' rel = 'stylesheet' href = '//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css' disabled>
     </head>
 
     <body>
@@ -112,7 +116,7 @@
           defaultData: "queries/queries.csv"
         }
       ],
-      "env":[
+      "envList":[
         {
           label:"webcharts",
           css:["https://cdn.rawgit.com/RhoInc/webcharts/master/css/webcharts.css"],
