avoid attaching duplicate Enter key listeners to controls; load data from cdn.rawgit.com rather than from github.io

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     {
       useServer: false,
       rootURL: "https://cdn.rawgit.com/RhoInc",
-      dataURL: "https://rhoinc.github.io/viz-library/data/",
+      dataURL: "https://cdn.rawgit.com/RhoInc/viz-library/master/data/",
       renderers: [
         {
           name: "aeexplorer",
