Add schema for codebook

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           main: "webcodebook",
           sub: "createChart",
           css: "css/webcodebook.css",
-          schema: null,
+          schema: "settings-schema.json",
           defaultData: "safetyData/ADAE.csv"
         },
         {
