--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script type = 'text/javascript' src = 'https://rawgit.com/RhoInc/viz-library/master/util/web/data/dataFiles.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
-        <link type = 'text/css' rel = 'stylesheet' href = 'server/pages/deps/json-forms/css/brutusin-json-forms.min.css'/>
+        <!--link type = 'text/css' rel = 'stylesheet' href = 'server/pages/deps/json-forms/css/brutusin-json-forms.min.css'/-->
         <link type = 'text/css' rel = 'stylesheet' href = 'https://cdn.rawgit.com/RhoInc/webcharts/master/css/webcharts.css'>
         <link type = 'text/css' rel = 'stylesheet' href = 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' disabled>
         <link type = 'text/css' rel = 'stylesheet' href = '//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css' disabled>
