keep settings form synced with text settings

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <title>Charting Application Tester (CAT) </title>
 
         <script type = 'text/javascript' src = 'https://d3js.org/d3.v3.min.js'></script>
+        <script type = 'text/javascript' src = 'https://cdn.rawgit.com/SheetJS/js-xlsx/master/dist/xlsx.full.min.js'></script>
         <script type = 'text/javascript' src = 'https://cdn.rawgit.com/RhoInc/webcharts/master/build/webcharts.js'></script>
         <script type = 'text/javascript' src = 'server/pages/deps/jquery.min.js'></script>
         <script type = 'text/javascript' src = 'server/pages/deps/underscore.js'></script>
         <script type = 'text/javascript' src = 'server/pages/deps/opt/jsv.js'></script>
-        <!--script type = 'text/javascript' src = 'server/pages/deps/jsonform.js'></script-->
         <script type = 'text/javascript' src = 'server/pages/deps/json-forms/js/brutusin-json-forms.min.js'></script>
         <script type = 'text/javascript' src = 'server/pages/deps/json-forms/js/brutusin-json-forms-bootstrap.min.js'></script>
         <script type = 'text/javascript' src = 'server/pages/deps/json5.js'></script>
@@ -23,14 +23,12 @@
         <script type = 'text/javascript' src = 'https://rawgit.com/RhoInc/viz-library/master/util/web/data/dataFiles.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
-        <!--link type = 'text/css' rel = 'stylesheet' href = 'server/pages/deps/json-forms/css/brutusin-json-forms.min.css'/-->
         <link type = 'text/css' rel = 'stylesheet' href = 'https://cdn.rawgit.com/RhoInc/webcharts/master/css/webcharts.css'>
         <link type = 'text/css' rel = 'stylesheet' href = 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' disabled>
         <link type = 'text/css' rel = 'stylesheet' href = '//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css' disabled>
     </head>
 
-    <body>
-    </body>
+    <body></body>
 
     <script src = 'index.js'></script>
 </html>
