replace renderer folder metadatum with main property of package.json

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type = 'text/javascript' src = 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
         <script type = 'text/javascript' src = '//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js'></script>
         <script type = 'text/javascript' src = './build/cat.js'></script>
-        <script type = 'text/javascript' src = 'https://rawgit.com/RhoInc/viz-library/master/util/web/data/dataFiles.js'></script>
+        <script type = 'text/javascript' src = 'https://cdn.jsdelivr.net/gh/RhoInc/data-library/dataFiles.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = './css/cat.css'>
         <link type = 'text/css' rel = 'stylesheet' href = 'https://cdn.rawgit.com/RhoInc/webcharts/master/css/webcharts.css'>
