--- a/test-page/handsontable/index.html
+++ b/test-page/handsontable/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Handsontable: Test Page</title>
+        <title>Hands-on Table: Test Page</title>
         <meta http-equiv = 'Content-Type' content = 'text/html; charset = utf-8'>
 
         <script type = 'text/javascript' src = 'https://cdn.jsdelivr.net/npm/underscore@1.9.1/underscore.js'></script>
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <div id = 'title'>Handsontable</div>
+        <div id = 'title'>Hands-on Table</div>
         <div id = 'subtitle'>Test Page</div>
         <div id = 'container'>
             <div id = 'chart'></div>
