--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
         <title>Charting Application Tester (CAT) </title>
 
-        <script type = 'text/javascript' src = 'https://d3js.org/d3.v3.min.js'></script>
+        <!--script type = 'text/javascript' src = 'https://d3js.org/d3.v3.min.js'></script-->
+        <script type='text/javascript' src='d3.v3.min.js'></script>
         <script type = 'text/javascript' src = 'https://cdn.rawgit.com/SheetJS/js-xlsx/master/dist/xlsx.full.min.js'></script>
         <script type = 'text/javascript' src = 'https://cdn.jsdelivr.net/gh/protobi/js-xlsx@v0.8/dist/xlsx.full.min.js'></script>
         <script type = 'text/javascript' src = 'https://cdn.rawgit.com/RhoInc/webcharts/master/build/webcharts.js'></script>
